--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,13 @@
+sudo: false
 language: php
 php:
-  - 5.3
-  - 5.4
-  
-before_script:
-  - wget http://getcomposer.org/composer.phar
-  - php composer.phar install
+  - 5.5
+  - 5.6
+  - 7
+
+install:
+  - composer install
+
+script:
+  - composer cs
+  - composer test
