--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,13 @@
-sudo: false
 language: php
 php:
-  - 5.5
-  - 5.6
-  - 7
+  - "7.2"
 
 install:
-  - composer install
+  - composer install --prefer-dist
 
 script:
-  - composer cs
-  - composer test
+  - composer ci
+
+cache:
+  directories:
+    - $HOME/.composer/cache/files
