--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
     "authors": [
         {
             "name": "Jon Cram",
-            "email": "jon@webignition.net"
+            "email": "webignition@gmail.com"
         }
     ],
     "scripts": {
@@ -26,12 +26,12 @@
         }
     },
     "require": {
-        "php": ">=5.5.0",
-        "webignition/string-parser":">=0.2.3,<1"
+        "php": ">=7.2.0",
+        "webignition/string-parser":">=1.0,<2"
     },
     "require-dev": {
-        "phpunit/phpunit": "~4.0",
-        "squizlabs/php_codesniffer": "3.*"
+        "phpunit/phpunit": "^8.0",
+        "squizlabs/php_codesniffer": "^3.5"
     },
     "minimum-stability":"stable",
     "prefer-stable":true
