--- a/composer.json
+++ b/composer.json
@@ -12,9 +12,15 @@
         }
     ],
     "scripts": {
+        "cs-fixer-dry-run": "./vendor/bin/php-cs-fixer fix --dry-run --verbose --show-progress none",
+        "cs-fixer-fix": "./vendor/bin/php-cs-fixer fix --diff",
         "cs-phpcs": "./vendor/bin/phpcs",
         "static-analysis": "./vendor/bin/phpstan",
         "test": "./vendor/bin/phpunit --colors=always",
+        "cs": [
+            "@cs-fixer-dry-run",
+            "@cs-phpcs"
+        ],
         "ci": [
             "@composer cs",
             "@composer static-analysis",
@@ -34,7 +40,8 @@
     "require-dev": {
         "phpunit/phpunit": "^9.5",
         "squizlabs/php_codesniffer": "^3.6",
-        "phpstan/phpstan": "^0.12.99"
+        "phpstan/phpstan": "^0.12.99",
+        "friendsofphp/php-cs-fixer": "^3.2"
     },
     "minimum-stability":"stable",
     "prefer-stable":true
